--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto AngularJS</title>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body ng-controller="indexController">
     <header>
         <h2 ng-bind="titulo"></h2>
-        <table>
+        <table class="striped">
             <thead>
                 <tr>
                     <th>Nome</th>
@@ -27,7 +31,7 @@
                     <td>{{aluno.Nota}}</td>
                     <td>{{aluno.Nota2}}</td>
                     <td>{{aluno.Nota3}}</td>
-                    <td>{{aluno.Media}}</td>
+                    <td>{{media(aluno)}}</td>
                 </tr>
             </tbody>
         </table>
@@ -36,6 +40,10 @@
 
     </header>
 
+     <!--JavaScript at end of body for optimized loading-->
+     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="lib/angular/angular.min.js"></script>
     <script type="text/javascript">
         angular.module("meuModulo", [])
@@ -48,6 +56,11 @@
                 {Nome: "Marcos", Email: "marcos@mail.com", Nota: 79, Nota2: 75, Nota3: 25},
                 {Nome: "Joao", Email: "joao@mail.com", Nota: 55, Nota2: 42, Nota3: 84}
             ]
+
+            $scope.media = function(Alunos){
+                var media = (Alunos.Nota + Alunos.Nota2 + Alunos.Nota3) / 3;
+                return media.toFixed(2);
+            };
         })
     </script>
 </body>
