--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto AngularJS</title>
 
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!--Let browser know website is optimizedeta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
 <body ng-controller="indexController">
@@ -40,17 +39,79 @@
                 <td>{{aluno.Nota}}</td>
                 <td>{{aluno.Nota2}}</td>
                 <td>{{aluno.Nota3}}</td>
-                <td>{{media(aluno)}}</td>
+                <td>{{aluno.media}}</td>
             </tr>
         </tbody>
     </table>
+    <div class="row">
+        <!-- Modal Trigger -->
+        <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Novo Aluno</a>
+    </div>
 </main>
 
-     <!--JavaScript at end of body for optimized loading-->
-     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="lib/angular/angular.min.js"></script>
+ 
+
+ <!-- Modal Structure -->
+ <div id="modal1" class="modal modal-fixed-footer">
+   <div class="modal-content">
+     <h4>Adicionar Aluno</h4>
+     <p>Preencha os dados do Aluno</p>
+     <div class="row">
+        <div class="input-field col m6 s12"> 
+            <!-- !Obj Aluno -->
+            <input type="text" ng-model="Aluno.Nome" class="validate">
+            <label>Nome</label>
+        </div>       
+     </div>
+     {{Aluno}}
+     <div class="row">
+        <div class="input-field col m6 s12">
+            <input type="email" ng-model="Aluno.Email" class="validate">
+            <label>Email</label>
+        </div>       
+     </div>
+     <div class="row">
+        <div class="input-field col m4 s12">
+            <input type="number" ng-model="Aluno.Nota" class="validate">
+            <label>Nota 1</label>
+        </div>       
+     </div>
+     <div class="row">
+        <div class="input-field col m4 s12">
+            <input type="number" ng-model="Aluno.Nota2" class="validate">
+            <label>Nota 2</label>
+        </div>       
+     </div>
+     <div class="row">
+        <div class="input-field col m4 s12">
+            <input type="number" ng-model="Aluno.Nota3" class="validate">
+            <label>Nota 3</label>
+        </div>       
+     </div>
+   </div>
+   <div class="modal-footer">
+    <a ng-click="addAluno(Aluno)" class="waves-effect waves-light btn blue">Adicionar</a>
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancelar</a> 
+   </div>
+ </div>
+
+
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<!--JavaScript at end of body->-->
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="lib/angular/angular.min.js"></script>
+
+    <!--MODAL-->
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.modal').modal();
+        });
+    </script>
+
+
     <script type="text/javascript">
         angular.module("meuModulo", [])
         .controller("indexController", function($scope){
@@ -61,12 +122,33 @@
                 {Nome: "Camila", Email: "Camila@mail.com", Nota: 90, Nota2: 89, Nota3: 89},
                 {Nome: "Marcos", Email: "marcos@mail.com", Nota: 79, Nota2: 75, Nota3: 25},
                 {Nome: "Joao", Email: "joao@mail.com", Nota: 55, Nota2: 42, Nota3: 84}
-            ]
+            ];
 
-            $scope.media = function(Alunos){
-                var media = (Alunos.Nota + Alunos.Nota2 + Alunos.Nota3) / 3;
+            // resolvendo a media pra calcular apenas uma vez no front
+            var init = function(){
+                $scope.alunos.forEach(function(aluno){ //ForEach no [alunos]
+                    aluno.media = media(aluno); //no atributo média, que chama a função média
+                });
+            };
+
+            var contar = 0;
+            var media = function(Alunos){
+                console.log(contar++);
+                var media = (parseFloat(Alunos.Nota) + parseFloat(Alunos.Nota2) + parseFloat(Alunos.Nota3)) / 3;
                 return media.toFixed(2);
             };
+
+            // Aluno com maiusculo é o Obj Aluno
+            $scope.addAluno = function(Aluno){
+                Aluno.media = media(Aluno);
+                $scope.alunos.push(Aluno); /*Adicionando alunos no Obj Alunos*/
+                $('#modal1').close();
+                //Reset forms
+                $scope.Aluno = {Nome:"", email:"", Nota:"", Nota2:"", Nota3:"", media:""};
+                
+            };
+
+            init();
         })
     </script>
 </body>
